--- a/Day05/基于Flask搭建服务器响应页面/template/Requirement.html
+++ b/Day05/基于Flask搭建服务器响应页面/template/Requirement.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" , href="/static/Requirement.css">
+    <link rel="stylesheet" , href="/static/Requirement.css">    // 引入css文件
 </head>
 <body>
 
@@ -24,7 +24,7 @@
         Don't try to hurt Kevin.
     </span>
 </h2>
-<script src="/static/Requirement.js"></script>
+<script src="/static/Requirement.js"></script>  // 引入js文件
 
 </body>
 </html>
